examples/test/testpolicy14113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14113
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key37: value21
      key20: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value13
          key47: value1
          key26: value27
      podSelector:
        matchLabels:
          key42: value4
          key19: value11
